# pam-krb5

./: .bzrignore  .cvsignore  .gitignore  .travis.yml  CHANGES  COPYRIGHT  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  README.patched  TODO  account.c  aclocal.m4  alt-auth.c  api-account.c  api-auth.c  api-password.c  api-session.c  auth.c  autogen  bootstrap  cache.c  compat-aix.c  compat-heimdal.c  compat-mit.c  compat.c  compat_heimdal.c  compat_mit.c  config.h.in  configure  configure.ac  context.c  context.h  credlist.c  credlist.h  (+88 more)
.github/workflows/: build.yaml
ci/: install  kdc-setup-heimdal  kdc-setup-mit  test
debian/: NEWS  NEWS.Debian  README.Debian  changelog  control  copyright  docs  ex.doc-base.package  libpam-heimdal.NEWS  libpam-heimdal.postinst  manpage.1.ex  menu.ex  pam-auth-update  postinst.ex  postinst.ubuntu  postrm.ex  preinst.ex  prerm  prerm.ex  prerm.ubuntu  rules  watch  watch.ex
debian/patches/: 0001-Avoid-double-free-of-ctx-princ-in-a-failure-case.patch  0001-Fix-buffer-overflow-in-prompting.patch  series
debian/source/: local-patch-header
debian/upstream/: metadata  signing-key.asc
docs/: docknot.yaml  pam_krb5.5  pam_krb5.pod
docs/metadata/: blurb  description  metadata.json  quote  requirements
docs/metadata/debian/: summary
docs/metadata/sections/: configuring  debugging  history-and-acknowledgements  implementation-notes
docs/metadata/test/: prefix  suffix
libpam-krb5/: Makefile  README  pam_krb5_acct.c  pam_krb5_auth.c  pam_krb5_sess.c  support.c
libpam-krb5/debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  rules  session-mgt.patch
libpam-krb5/patches/: patch-ad
m4/: cc-flags.m4  kadm5clnt.m4  krb5-config.m4  krb5-pkinit.m4  krb5.m4  ld-version.m4  lib-depends.m4  lib-helper.m4  lib-pathname.m4  pam-const.m4  snprintf.m4
module/: account.c  alt-auth.c  auth.c  context.c  fast.c  internal.h  options.c  password.c  prompting.c  support.c
pam-util/: args.c  args.h  logging.c  logging.h  options.c  options.h  vector.c  vector.h
patches/: README  pam-krb5.patch  pam_krb5.linux.patch  patch-ae  patch-ag
portable/: asprintf.c  dummy.c  issetugid.c  issetuidgid.c  kadmin.h  krb5-extra.c  krb5-profile.c  krb5.h  macros.h  mkstemp.c  pam.h  pam_syslog.c  pam_vsyslog.c  reallocarray.c  snprintf.c  stdbool.h  strndup.c  system.h
tests/: TESTS  runtests.c
tests/config/: README
tests/data/: cppcheck.supp  generate-krb5-conf  krb5.conf  valgrind.supp
tests/data/scripts/alt-auth/: basic  basic-debug  fail  fail-debug  fallback  fallback-debug  fallback-realm  force  force-fail-debug  force-fallback  only  only-fail  username-map  username-map-prefix
tests/data/scripts/bad-authtok/: no-prompt  try-first  try-first-debug  use-first  use-first-debug
tests/data/scripts/basic/: force-first  force-first-debug  ignore-root  ignore-root-debug  no-context  no-context-debug  no-krb
tests/data/scripts/cache/: basic  open-session  search-k5login  search-k5login-debug
tests/data/scripts/cache-cleanup/: auth-only
tests/data/scripts/expired/: basic-heimdal  basic-heimdal-debug  basic-heimdal-flag-silent  basic-heimdal-old-debug  basic-heimdal-silent  basic-mit  basic-mit-debug  basic-mit-flag-silent  basic-mit-silent  defer  defer-debug  defer-mit  fail  fail-debug
tests/data/scripts/fast/: anonymous  anonymous-debug  ccache  ccache-debug  no-ccache  no-ccache-debug
tests/data/scripts/general/: no-cache
tests/data/scripts/no-cache/: alt-auth-fail  alt-auth-fail-debug  auth-only  no-prompt  no-prompt-try  no-prompt-use  prompt  prompt-expose  prompt-fail  prompt-fail-debug  prompt-principal  try-first  use-first
tests/data/scripts/pam-user/: no-update  update
tests/data/scripts/password/: authtok  authtok-force  banner  banner-expose  basic  basic-debug  expose  no-banner  no-banner-expose  prompt-principal
tests/data/scripts/pkinit/: basic  basic-debug  no-use-pkinit  pin-mit  preauth-opt-mit  prompt-try  prompt-use  try-pkinit  try-pkinit-debug  try-pkinit-debug-mit
tests/data/scripts/realm/: fail-bad-user-realm  fail-no-realm  fail-no-realm-debug  fail-realm  fail-user-realm  pass-realm  pass-user-realm
tests/data/scripts/stacked/: auth-only  basic  prompt-fail  prompt-principal  try-first  use-first
tests/data/scripts/trace/: supported  unsupported
tests/docs/: pod-spelling-t  pod-t  spdx-license-t  urls-t
tests/fakepam/: README  config.c  data.c  general.c  internal.h  kuserok.c  logging.c  pam.h  script.c  script.h  testing.c  testing.h
tests/module/: alt-auth-t.c  bad-authtok-t.c  basic-t.c  cache-cleanup-t.c  cache-t.c  expired-t.c  fast-t.c  general-t.c  long-t.c  no-cache-t.c  pam-user-t.c  password-t.c  pkinit-t.c  realm-t.c  script.c  script.h  stacked-t.c  trace-t.c
tests/pam-util/: args-t.c  fakepam-t.c  logging-t.c  options-t.c  vector-t.c
tests/portable/: asprintf-t.c  mkstemp-t.c  snprintf-t.c  strndup-t.c
tests/style/: obsolete-strings-t
tests/tap/: basic.c  basic.h  kadmin.c  kadmin.h  kerberos.c  kerberos.h  libtap.sh  process.c  process.h  string.c  string.h
tests/tap/perl/Test/: RRA.pm
tests/tap/perl/Test/RRA/: Automake.pm  Config.pm
upstream/: signing-key.asc
